# rtems-epiphany

./: README
aclocal/: enable-smp.m4
c/src/: configure.ac
c/src/aclocal/: rtems-cpu-subdirs.m4
c/src/lib/libbsp/epiphany/: acinclude.m4  configure.ac
c/src/lib/libbsp/epiphany/parallella/: .Makefile.am.swp  Makefile.am  configure.ac  preinstall.am
c/src/lib/libbsp/epiphany/parallella/clock/: clockdrv.c
c/src/lib/libbsp/epiphany/parallella/console/: console-io.c
c/src/lib/libbsp/epiphany/parallella/include/: bsp.h  bspopts.h  tm27.h
c/src/lib/libbsp/epiphany/parallella/make/custom/: parallella.cfg
c/src/lib/libbsp/epiphany/parallella/start/: start.S
c/src/lib/libbsp/epiphany/parallella/startup/: bsp_interprocessor_support.c  bspsmp.c  bspstart.c  linkcmds
c/src/lib/libbsp/epiphany/parallella/timer/: timer.c
c/src/lib/libbsp/shared/: bootcard.c  bspgetworkarea.c  clockdrv_shell.h
c/src/wrapup/: Makefile.am
cpukit/: Makefile.am  configure.ac
cpukit/libcsupport/: Makefile.am
cpukit/libcsupport/include/rtems/: libio_.h
cpukit/libcsupport/src/: malloc.c  malloc_initialize.c  read.c  syscall_stubs.c  vprintk.c  write.c
cpukit/libfs/src/imfs/: imfs.h  imfs_link.c
cpukit/libfs/src/nfsclient/src/: dirutils.c
cpukit/libfs/src/pipe/: fifo.c
cpukit/libmisc/shell/: dd-args.c  shell_script.c
cpukit/posix/src/: key.c
cpukit/rtems/: Makefile.am  preinstall.am
cpukit/rtems/include/: rtems.h
cpukit/rtems/src/: semcreate.c  tasks.c
cpukit/sapi/: Makefile.am
cpukit/sapi/include/: confdefs.h
cpukit/sapi/include/rtems/: scheduler.h  sptables.h
cpukit/sapi/src/: exinit.c  rtemsapi.c
cpukit/score/: Makefile.am  preinstall.am
cpukit/score/cpu/: Makefile.am
cpukit/score/cpu/epiphany/: Makefile.am  cpu.c  epiphany-atomic.c  epiphany-context-initialize.c  epiphany-context-switch.S  epiphany-exception-handler.S  epiphany-smp.c  preinstall.am
cpukit/score/cpu/epiphany/e-lib/include/: e_coreid.h  e_dma.h  e_ic.h  e_lib.h  e_mem.h  e_mutex.h  e_regs.h  e_shm.h
cpukit/score/cpu/epiphany/e-lib/src/: .e_trace_dma.c.swp  e_coreid_config.c  e_coreid_coords_from_coreid.c  e_coreid_from_coords.c  e_coreid_get_coreid.c  e_coreid_get_global_address.c  e_coreid_is_oncore.c  e_coreid_neighbor_id.c  e_ctimer_stop.c  e_ctimer_wait.c  e_dma_busy.c  e_dma_copy.c  e_dma_set_desc.c  e_dma_start.c  e_dma_wait.c  e_irq_attach.c  e_irq_clear.c  e_irq_global_mask.c  e_irq_mask.c  e_irq_set.c  e_mem_read.c  e_mem_write.c  e_mutex_barrier.c  e_mutex_barrier_init.c  e_mutex_init.c  e_mutex_lock.c  e_mutex_trylock.c  e_mutex_unlock.c  e_reg_read.c  e_reg_write.c  e_shm.c  e_trace.c  e_trace_dma.c
cpukit/score/cpu/epiphany/rtems/: asm.h
cpukit/score/cpu/epiphany/rtems/score/: cpu.h  epiphany-utility.h  epiphany.h  types.h
cpukit/score/include/rtems/score/: heapimpl.h  schdedulerpfair.h  schedulerimpl.h  schedulerpfairimpl.h  schedulerpfairsmp.h  schedulerpfairsmpimpl.h  schedulerpfairtypes.h  smpimpl.h  thread.h  threaddispatch.h  threadimpl.h
cpukit/score/src/: apimutex.c  schedulerpfair.c  schedulerpfairsmp.c  smp.c  threaddispatch.c  threadenabledispatch.c  threadhandler.c  threadstartmultitasking.c
cpukit/wrapup/: Makefile.am
host-rtems/: README  build.sh  run.sh
host-rtems/src/: read_rtems_poll.c  rtems_smp2.c
patches/: 0001-Add-Epiphany-for-RTEMS.patch  0001-bfd-config.bfd-Add-epiphany-rtems.patch  0001-newlib-configure.host-Add-epiphany-rtems.patch  0002-ld-configure.tgt-Add-epiphany-rtems.patch  README  binutils-2.23-software-cache-rtems.diff
testsuites/: configure.ac
testsuites/samples/: Makefile.am
testsuites/samples/hello/: Makefile.am  init.c
testsuites/samples/minimum/: init.c
testsuites/samples/ticker/: Makefile.am  init.c  system.h  tasks.c
testsuites/smptests/: Makefile.am  configure.ac
testsuites/smptests/smpschedpfair01/: Makefile.am  init.c  system.h
testsuites/smptests/smpschedpfair02/: :qq  Makefile.am  init.c  system.h
testsuites/sptests/spedfsched02/: system.h
testsuites/support/include/: buffer_test_io.h
testsuites/tmtests/: Makefile.am
testsuites/tmtests/include/: timesys.h
testsuites/tmtests/tm26/: system.h  task1.c
testsuites/tmtests/tm27/: system.h  task1.c
testsuites/tmtests/tmoverhd/: system.h  testtask.c
